# tap-streakcrm

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  meltano.yml  plugin.yaml  pyproject.toml  tox.ini
.github/workflows/: autofix.yaml  autofix.yml  build.yaml  build.yml  test.yaml  test.yml
tap_streakcrm/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: test_core.py
