[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "tap-streakcrm"
description = "`tap-streakcrm` is a Singer tap for Streak CRM, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "singer.io",
  "Streak CRM",
]
license.file = "LICENSE"
maintainers = [
  { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" },
]
authors = [
  { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [
  "version",
]
dependencies = [
  "requests<3,>=2",
  "singer-sdk~=0.42.0a1",
]
optional-dependencies.dev = [
  "tap-streakcrm[testing,typing]",
]
optional-dependencies.testing = [
  "deptry>=0.12",
  "pytest>=8",
  "singer-sdk[testing]",
]
optional-dependencies.typing = [
  "mypy",
  "types-requests",
]
urls.Documentation = "https://github.com/edgarrmondragon/tap-streakcrm#readme"
urls.Homepage = "https://github.com/edgarrmondragon/tap-streakcrm"
urls.Repository = "https://github.com/edgarrmondragon/tap-streakcrm"
scripts."tap-streakcrm" = "tap_streakcrm.tap:TapStreakCRM.cli"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.sync.scripts]
console = "tap-streakcrm {args}"
jsonl = "tap-streakcrm {args} > tap-streakcrm.jsonl"

[tool.hatch.envs.test]
features = [
  "testing",
]
[tool.hatch.envs.test.scripts]
integration = "pytest {args:tests}"
dependencies = "deptry ."

[tool.hatch.envs.all]
template = "test"
[[tool.hatch.envs.all.matrix]]
python = [
  "3.9",
  "3.10",
  "3.11",
  "3.12",
  "3.13",
]

[tool.hatch.envs.typing]
features = [
  "testing",
  "typing",
]
[tool.hatch.envs.typing.scripts]
check = "mypy --strict {args:tap_streakcrm tests}"

[tool.ruff]
line-length = 88

lint.select = [
  "ALL",
]
lint.ignore = [
  "ANN101", # missing-type-self
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
  "PD",     # pandas-vet
]
lint.per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
lint.unfixable = [
  "ERA001", # commented-out-code
]
lint.flake8-annotations.allow-star-arg-any = true
lint.isort.known-first-party = [
  "tap_streakcrm",
]
lint.isort.required-imports = [
  "from __future__ import annotations",
]
lint.pydocstyle.convention = "google"

[tool.deptry.package_module_name_map]
mypy = "mypy"
pytest = "pytest"
tap-streakcrm = "tap_streakcrm"
types-requests = "requests"

[tool.deptry.per_rule_ignores]
DEP002 = [
  "deptry",
  "mypy",
  "pytest",
]

[tool.pytest.ini_options]
addopts = "-vvv"

[tool.mypy]
python_version = "3.12"
warn_redundant_casts = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "backoff.*",
]
